Added last features: age and weighted age. Deleted NSmell feature.